test/files/neg/implicits.check
implicits.scala:38: error: type mismatch;
 found   : test2.HSome[String,test2.HMap]
 required: Int
  foo(set)
      ^
implicits.scala:46: error: type mismatch;
 found   : Iterable[_]
 required: scala.collection.IterableOnce[Mxml]
                case s: scala.collection.Iterable[_] => s
                                                        ^
implicits.scala:47: error: type mismatch;
 found   : Any
 required: Mxml
                case a => List(a)
                               ^
implicits.scala:59: error: could not find implicit value for parameter x: Nothing
  foo {
      ^
implicits.scala:34: warning: Implicit definition should have explicit type (inferred T) [quickfixable]
  implicit def select[T](t: HSome[T,_]) = t.head
               ^
implicits.scala:35: warning: Implicit definition should have explicit type (inferred L) [quickfixable]
  implicit def selectTail[L](t: HSome[_,L]) = t.tail
               ^
2 warnings
4 errors
